# OpenGL_Coursework

./: CMakeLists.txt  main.cpp  packageM.h
Lib/imGui/: imfilebrowser.h
Source/: app.cpp  app.h
Source/elements/: camera.cpp  camera.h  elements.h  input.h  light.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertexHolder.cpp  vertexHolder.h
Source/generating/: PerlinNoise.cpp  PerlinNoise.h
Source/importMesh/: importBase.h  objImport.cpp  objImport.h
Source/render/: openGLBufferManager.cpp  openGLBufferManager.h  openGLContext.cpp  openGLContext.h  renderBase.h  uiContext.cpp  uiContext.h
Source/shader/: shaderUtils.cpp  shaderUtils.h
Source/ui/: propertyPanel.cpp  propertyPanel.h  sceneView.cpp  sceneView.h
Source/utils/: ImguiWidgets.h  strUtils.h
Source/window/: TGWindow.cpp  TGWindow.h
Source/window/frontPage/: frontPage.cpp  frontPage.h
elements/: vertexHolder.cpp  vertexHolder.h
generating/: PerlinNoise.cpp  PerlinNoise.h
render/: renderBase.h
shaders/: fragmentShader.glsl  vertexShader.glsl
window/: TGWindow.cpp  TGWindow.h  camera.h  windowBase.h
window/frontPage/: frontPage.h
